lab1/Test/L1-A-4-38.cmm
float mk9RPIFR7XTU4hQZv3 ( ) {
  struct {
  }gZiB54povoFlc7R [ 417981314 ] int = ! TAas20DIV6AAToYLTUG 
    ( ) = - _ZZA4H650gJ2F9x0 ( ) = SaBlMm9F_n ;
  float jW03QpogqpYv6TiTJdv , u25NLMUr_G7at , qTf 
    [ 624343314 ] [ 2062763658 ] 697689404 ] = QRkYU ;
|| }
GiZgKiT4Umu1TE8ycJ 